# Litterbug-Algorithm-GPU

./: CMakeLists.txt  Litter_detect.cpp  Litter_detect.cpp.autosave  README.md  scoring.cpp  sobel.cl
LitterBug/: LitterBug.pro
cl/: cl.pri  kernels.cpp  kernels.cpp.autosave  kernels.h  magic.asm  magic.cl  matproxy.h  simple_bugged_test.asm  simple_bugged_test.cl
